Revert patches :
https://github.com/PWN-Term/mobile/commit/e63023546aaf48ae39c72ab37f6ef3f5474e19cc and https://github.com/PWN-Term/mobile/commit/ed4c4ee73b5bc7f08495268a7e8e7bce3f265747